...
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="Task title:"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittext_taskTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash6"
        app:layout_constraintVertical_bias="0.766" />

...
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="Task description:"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittextmulti_taskDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_taskTitle"
        app:layout_constraintVertical_bias="0.555" />

...
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="Task payment amount:"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittext_taskPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextmulti_taskDescription"
        app:layout_constraintVertical_bias="0.922" />

...
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_submitTask"
        android:layout_width="204dp"
        android:layout_height="68dp"
        android:backgroundTint="#00d3a9"
        android:fontFamily="@font/questrial"
        android:text="Submit Task"
        android:textAllCaps="false"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextmulti_taskDescription" />

    <Spinner
        android:id="@+id/tagList"
        android:layout_width="307dp"
        android:layout_height="32dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="26dp"
...
