...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="275dp"
        android:layout_height="67dp"
        android:background="@drawable/loginbutton"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/questrial"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:cornerRadius="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash"
        app:layout_constraintVertical_bias="0.905" />

    <Button
...
