...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

        <Button
            android:id="@+id/button_homepageSubmitTask"
            style="@style/Widget.App.Button"
            android:layout_width="300sp"
            android:layout_height="65sp"
            android:background="#000000"
            android:backgroundTint="#00D3A9"
            android:fontFamily="@font/questrial"
...
